syntax = "proto3";
package gluon.contractmanager.v1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "gluon/contractmanager/v1/failure.proto";
import "gluon/contractmanager/v1/params.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/gluon-zone/gluon/x/contractmanager/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/gluon/contractmanager/v1/params";
  }

  // Failures queries the failures of the module.
  rpc Failures(QueryFailuresRequest) returns (QueryFailuresResponse) {
    option (google.api.http).get = "/gluon/contractmanager/v1/failures";
  }

  // AddressFailures queries the failures of the module for a given address.
  rpc AddressFailures(QueryAddressFailuresRequest) returns (QueryAddressFailuresResponse) {
    option (google.api.http).get = "/gluon/contractmanager/v1/failures/{address}";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryFailuresRequest is request type for the Query/Failures RPC method.
message QueryFailuresRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryFailuresResponse is response type for the Query/Failures RPC method.
message QueryFailuresResponse {
  repeated Failure failures = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryAddressFailuresRequest is request type for the Query/Failures RPC method.
message QueryAddressFailuresRequest {
  // address of the contract which Sudo call failed.
  string address = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryAddressFailuresResponse is response type for the Query/AddressFailures RPC method.
message QueryAddressFailuresResponse {
  repeated Failure failures = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
